--- a/WarrantGenerator.csproj
+++ b/WarrantGenerator.csproj
@@ -29,8 +29,8 @@
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
     <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.1.4" />
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
-    <PackageReference Include="DocX" Version="3.0.1" />
     <PackageReference Include="GHSoftware.Avalonia.SpellChecker" Version="0.3.0" />
+    <PackageReference Include="Open-XML-SDK" Version="2.9.1" />
   </ItemGroup>
 </Project>
 
